end of class commit

--- a/3080Site/index.html
+++ b/3080Site/index.html
@@ -4,16 +4,17 @@
     <head>
         <!--This is my comment example. The title tag is used for the label in a browser tab-->
         <title> Page </title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/css/styles.css">
     </head>
     <body>
 
-
+        <a href="pictures.html">Pictures</a>
         <h1>Heading 1 example</h1>
         <h2>Heading 2 example</h2>
         <h3>Heading 3 example</h3>
         <p>Lorem ipsum <strong><em> sit amet</em></strong>, consectetur adipisicing elit. Quam aliquam dignissimos, <em> eos recusandae</em> ducimus maiores mollitia sed, voluptatem obcaecati officiis, expedita unde enim accusamus! Nulla quisquam, ex impedit aperiam consequatur praesentium voluptatibus quidem nisi veritatis, ratione quaerat hic. Adipisci iure placeat fugiat nisi ullam voluptatum, nihil architecto porro. Atque.</p>
         <br>
+       
         <br>
 
         <p>words and stuff and things
@@ -28,7 +29,7 @@
             <li>This is number two</li>
 
         </ol>
-
+        
     </body>
 
 
