starting fresh for the project

--- a/3080Site/contact.html
+++ b/3080Site/contact.html
@@ -30,7 +30,9 @@
 
             <div>
                 <label for="">How can I help you?</label>
+                <textarea name="message" id="" cols="30" rows="10"></textarea>
             </div>
+            <button class="btn">Submit</button>
            </form>
 
 
