--- a/3080Site/index.html
+++ b/3080Site/index.html
@@ -13,6 +13,15 @@
         
         
     </body>
+    <div class="navigation">
+        <nav>
+            <ul id="nav">
+                <li><a href="/index.html"></a>Home</li>
+                <li><a href="/Pictures.html"></a>Pictures</li>
+            </ul>
+        </nav>
+    </div>
+    <br>
     <h1>This is an example of an h1</h1>
     <h2>This is an example of an h2</h2>
     <h3>h3 example</h3>
