content in all but main page

--- a/3080Site/crochetCache/cache.html
+++ b/3080Site/crochetCache/cache.html
@@ -20,5 +20,10 @@
                           </nav>
                         </div>
                         <br>
+                        <div class="row">
+                                <div class="column">
+                                  <h2>The Cache</h2>
+                                  <p>Patterns are currently being created for the future database.<br> Please check back in soon.</p>
+                                  <br>
 </body>
 </html>
