--- a/3080Site/crochetCache/links.html
+++ b/3080Site/crochetCache/links.html
@@ -20,5 +20,20 @@
                           </nav>
                         </div>
                         <br>
+                        <div class="row">
+                                <div class="column">
+                                  <h2>References</h2>
+                                  <p>Here is a list of my favorite crochet resources sites. I use a lot of their patterns and tutorials in my own creations.<br> I hope you will enjoy them as much as I do!</p>
+                                  <br>
+                                  
+                                  <p><a href="http://thecrochetcrowd.com/" target="_blank"><img src="/crochetCache/Images/CrochetCrowdLogo.png" alt="Crochet Crowd Logo" width="250" height="250"></a>
+                                  <br><a href="http://thecrochetcrowd.com/" target="_blank">The Crochet Crowd</a></p>
+                                  <br>
+                                  <p><a href="https://www.ravelry.com/" target="_blank"><img src="/crochetCache/Images/RavelryLogo.png" alt="Crochet Crowd Logo" width="250" height="75"></a>
+                                    <br><a href="https://www.ravelry.com/" target="_blank">Ravelry</a></p>
+                                    <br>
+                                    <p><a href="https://www.yarnspirations.com/" target="_blank"><img src="/crochetCache/Images/YarnspirationsLogo.png" alt="Crochet Crowd Logo" width="250" height="80"></a>
+                                        <br><a href="https://www.yarnspirations.com/" target="_blank">Yarnspirations</a></p>
+                                </div>
 </body>
 </html>
