--- a/3080Site/crochetCache/aboutContact.html
+++ b/3080Site/crochetCache/aboutContact.html
@@ -20,5 +20,59 @@
                           </nav>
                         </div>
                         <br>
+                        <div class="row">
+                                <div class="column">
+                                  <h2>About Me</h2>
+                                  <p>My name is Mandy Powell and I am addicted to all things crochet. Here at the Crochet Cache, I intend to provide you with new weekly content consisting of a pattern tested by yours truly, and a long bit of rambling (they call it a blog) about my thoughts on said pattern. Some of these patterns will be created by me, while others will come straight from my favorite crochet sites that are listed on the References page. </p>
+                                
+                                  <br>
+                                  <h2>Contact Me</h2>
+                                  <p>Please feel free to fill out the form below to contact me with any questions or comments you might have about the Crochet Cache. Thanks for stopping by!</p>
+                                  <br>
+                                  
+<div class="container">
+  <form action="/action_page.php">
+  <div class="row">
+    <div class="col-25">
+      <label for="fname">First Name</label>
+    </div>
+    <div class="col-75">
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-25">
+      <label for="lname">Last Name</label>
+    </div>
+    <div class="col-75">
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-25">
+      <label for="country">Country</label>
+    </div>
+    <div class="col-75">
+      <select id="country" name="country">
+        <option value="australia">Australia</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-25">
+      <label for="subject">Subject</label>
+    </div>
+    <div class="col-75">
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+    </div>
+  </div>
+  <div class="row">
+    <input type="submit" value="Submit">
+  </div>
+  </form>
+</div>
+
 </body>
 </html>
